--- a/paystak.html
+++ b/paystak.html
@@ -4,6 +4,7 @@
         <title>Paystack</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous"/>
         <link rel="stylesheet" href="/Pay-Stack_clone/assets/Css/paystack.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -62,7 +63,7 @@
                                     <p>The trade email newsletter and <br>podcast for leaders in African <br> fintech</p>
                                 </div>
                             </div>
-                            <!-- <div class="droplearn">
+                            <div class="droplearn">
                                 <p>COMPANY</p>
                                 <li><a href="https://paystack.com/about">About Us</a></li>
                                 <li><a href="https://paystack.com/subscribe">Subscribe</a></li>
@@ -70,7 +71,7 @@
                                 <li><a href="https://paystack.com/careers">Careers</a></li>
                                 <li><a href="https://paystack.com/brand">Brand</a></li>
                                 <li><a href="https://paystack.com/media">Media Kit</a></li>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -102,9 +103,9 @@
                 </div>
             </nav>
             <section class="main-text">
-                <h1 class="diaplay-1">Modern Online and offline<br>payments for Africa</h1>
-                <p class="lead">Paystack helps businesses in Africa get paid by anyone,<br>anywhere in the world</p>
-                <button class="btn btn-success" type="button">Create a free account</button> 
+                <h1 class="diaplay-1 m-text">Modern Online and offline<br>payments for Africa</h1>
+                <p class="lead mp-text">Paystack helps businesses in Africa get paid by anyone,<br>anywhere in the world</p>
+                <button class="btn btn-success mt-4 btn-main" type="button">Create a free account</button> 
                 <a class="sub-main" href="https://paystack.com/contact/sales#form">or Contact Sales</a>
                 <div class="main-bottom">
                     <div class="bottom-right">
