--- a/paystak.html
+++ b/paystak.html
@@ -11,8 +11,8 @@
     </head>
     <body>
         <div class="text-center pt-2" id="div-bar1"> &#x1F389   New: Create delightful, in-person payment experience with Paystack Terminal &#8594</div>
-            <nav class="navbar navbar-expand-md navbar-light">
-                <div class="container-xxl ms-4" id="cont-left">
+            <nav class="navbar navbar-expand-md">
+                <div class="container-xxl ms-4" id="cont-left">                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
                     <a class="navbar-brand ms-3" href="https://paystack.com/"><img id="nav-logo" src="/Pay-Stack_clone/assets/Img/paystack-2.svg" alt="Logo" width="140"></a>
                     <div class="dropdown">
                         <li class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Why Paystack</li>
@@ -169,7 +169,7 @@
                 <img id="robust" src="/Pay-Stack_clone/assets/Img/Robust-Suite-of-APIs-Opt.png" alt="Img" height="600px">
             </section>
             <section class="sect4">
-
+                 
             </section>
     </body>
 </html>
